fix(bootstrap): implement zero-footprint modules, config-guarded listeners, and upgrade wiring